# controller_qt

./: CMakeLists.txt  README.md  Section.cpp  Section.h  Untitled 1.odt  chart.cpp  chart.h  circleindicator.cpp  circleindicator.h  core.cpp  core.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtmodbus.cpp  qtmodbus.h  serialib.h  signalprocessor.cpp  signalprocessor.h
core/: core.cpp  core.h  manager.cpp  manager.h  modbus.cpp  modbus.h  modbus_crc.h  signalprocessor.cpp  signalprocessor.h
gui/: Section.h  chart.cpp  chart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mychartview.cpp  mychartview.h
helping/: common_macro.h  errors.h  package.cpp  package.h
libs/: list.cpp  list.h  modbus.cpp  modbus.h  modbus_crc.c  serialib.h
